@@ -1,5 +1,10 @@
 $Id$
 
+2009-06-25 David Heremans <david.heremans@gnu-linux.net>
+	* The VDP register viewer will now indicate  the bits which 
+	  must be set according to the VDP technical data book.
+	* Ignore those bits when calculating the table addresses.
+
 2009-05-09 David Heremans <david.heremans@gnu-linux.net>
 	* Added support for symbol files generated by SJASM
 
